--- a/src/SerialLoops/Views/Dialogs/ImageCropResizeDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/ImageCropResizeDialog.axaml
@@ -5,7 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:assets="using:SerialLoops.Assets"
         xmlns:controls="using:SerialLoops.Controls"
-        xmlns:gbox="using:GroupBox.Avalonia.Controls"
         xmlns:paz="using:Avalonia.Controls.PanAndZoom"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:DataType="vm:ImageCropResizeDialogViewModel"
@@ -47,7 +46,7 @@
                                Height="{Binding PreviewHeight}"/>
                 </Canvas>
                 <StackPanel Orientation="Vertical" Spacing="5">
-                    <gbox:GroupBox Header="{x:Static assets:Strings.Scale_Image}" Theme="{StaticResource GroupBoxClassic}"
+                    <HeaderedContentControl Header="{x:Static assets:Strings.Scale_Image}"
                                    Width="200" Padding="5">
                         <StackPanel Orientation="Vertical" Spacing="5" Margin="5">
                             <StackPanel Orientation="Horizontal" Spacing="3" VerticalAlignment="Center" HorizontalAlignment="Right">
@@ -67,7 +66,7 @@
                                         CommandParameter="{Binding #IcrDialog}"/>
                             </StackPanel>
                         </StackPanel>
-                    </gbox:GroupBox>
+                    </HeaderedContentControl>
                     <StackPanel Orientation="Vertical" HorizontalAlignment="Center" Width="200" Margin="5">
                         <TextBlock Text="{x:Static assets:Strings.Arrow_Keys___Move_Image}"/>
                     </StackPanel>
