--- a/src/SerialLoops/Views/Dialogs/ProjectCreationDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/ProjectCreationDialog.axaml
@@ -5,7 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:assets="using:SerialLoops.Assets"
         xmlns:controls="using:SerialLoops.Controls"
-        xmlns:gbox="using:GroupBox.Avalonia.Controls"
         mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="275"
         MinWidth="400" MinHeight="275"
         Width="400" Height="275"
@@ -21,8 +20,7 @@
         <controls:AcrylicBorderHandler/>
 
         <StackPanel Spacing="10" HorizontalAlignment="Center" Margin="10 30">
-            <gbox:GroupBox Header="{x:Static assets:Strings.Project_Options}" Theme="{StaticResource GroupBoxClassic}"
-                           MinWidth="300" MinHeight="100">
+            <HeaderedContentControl Header="{x:Static assets:Strings.Project_Options}" MinWidth="300" MinHeight="100">
                 <StackPanel Spacing="10" VerticalAlignment="Center" Orientation="Vertical">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Spacing="10">
                         <TextBlock Text="{x:Static assets:Strings.Name}"/>
@@ -47,15 +45,14 @@
                         </ComboBox>
                     </StackPanel>
                 </StackPanel>
-            </gbox:GroupBox>
-            <gbox:GroupBox Header="{x:Static assets:Strings.Select_ROM}" Theme="{StaticResource GroupBoxClassic}"
-                           Padding="5" MinWidth="300" MinHeight="80">
+            </HeaderedContentControl>
+            <HeaderedContentControl Header="{x:Static assets:Strings.Select_ROM}" Padding="5" MinWidth="300" MinHeight="80">
                 <StackPanel Orientation="Horizontal" Spacing="10" VerticalAlignment="Center">
                     <Button Content="{x:Static assets:Strings.Open_ROM}" Command="{Binding PickRomCommand}"
                             Name="OpenRomButton"/>
                     <TextBlock Text="{Binding RomPath}"/>
                 </StackPanel>
-            </gbox:GroupBox>
+            </HeaderedContentControl>
             <StackPanel Orientation="Horizontal" Margin="5" Spacing="10">
                 <Button Content="{x:Static assets:Strings.Create}" Command="{Binding CreateCommand}" CommandParameter="{Binding #PcDialog}"
                         Name="CreateButton"/>
