--- a/src/SerialLoops/Views/Editors/SystemTextureEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/SystemTextureEditorView.axaml
@@ -5,7 +5,6 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:assets="using:SerialLoops.Assets"
              xmlns:utility="using:SerialLoops.Utility"
-             xmlns:gbox="using:GroupBox.Avalonia.Controls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:SystemTextureEditorViewModel"
              x:Class="SerialLoops.Views.Editors.SystemTextureEditorView">
@@ -20,12 +19,12 @@
                 <Button Content="{x:Static assets:Strings.Replace_with_Palette}" IsEnabled="{Binding !UsesCommonPalette}" Command="{Binding ReplaceWithPaletteCommand}"/>
             </StackPanel>
             <TextBlock IsVisible="{Binding UsesCommonPalette}" Text="{x:Static assets:Strings.This_system_texture_uses_a_common_palette__so_palette_replacement_has_been_disabled}"/>
-            <gbox:GroupBox Header="{x:Static assets:Strings.Palette}" Theme="{StaticResource GroupBoxClassic}" Width="264" HorizontalAlignment="Left">
+            <HeaderedContentControl Header="{x:Static assets:Strings.Palette}" Width="264" HorizontalAlignment="Left">
                 <Image Source="{Binding PaletteBitmap, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
                        HorizontalAlignment="Left"
                        Width="{Binding PaletteBitmap.Width}"
                        Height="{Binding PaletteBitmap.Height}"/>
-            </gbox:GroupBox>
+            </HeaderedContentControl>
         </StackPanel>
     </ScrollViewer>
 </UserControl>
