--- a/src/SerialLoops/Views/Dialogs/AddScriptCommandDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/AddScriptCommandDialog.axaml
@@ -7,12 +7,14 @@
         xmlns:controls="using:SerialLoops.Controls"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         Width="200" Height="150"
+        TransparencyLevelHint="AcrylicBlur"
+        Background="{DynamicResource FallbackBackgroundColor}"
+        ExtendClientAreaToDecorationsHint="True"
+        ExtendClientAreaChromeHints="NoChrome"
         x:DataType="vm:AddScriptCommandDialogViewModel"
         x:Class="SerialLoops.Views.Dialogs.AddScriptCommandDialog"
         Title="{x:Static assets:Strings.Add_Command}"
-        Name="AddCommandDialog"
-        TransparencyLevelHint="AcrylicBlur"
-        Background="{DynamicResource FallbackBackgroundColor}">
+        Name="AddCommandDialog">
     <Panel>
         <controls:AcrylicBorderHandler/>
 
