--- a/src/SerialLoops/Views/Dialogs/AddScriptSectionDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/AddScriptSectionDialog.axaml
@@ -7,12 +7,14 @@
         xmlns:controls="using:SerialLoops.Controls"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         Width="200" Height="150"
+        TransparencyLevelHint="AcrylicBlur"
+        Background="{DynamicResource FallbackBackgroundColor}"
+        ExtendClientAreaToDecorationsHint="True"
+        ExtendClientAreaChromeHints="NoChrome"
         x:DataType="vm:AddScriptSectionDialogViewModel"
         x:Class="SerialLoops.Views.Dialogs.AddScriptSectionDialog"
         Title="{x:Static assets:Strings.Add_Section}"
-        Name="AddSectionDialog"
-        TransparencyLevelHint="AcrylicBlur"
-        Background="{DynamicResource FallbackBackgroundColor}">
+        Name="AddSectionDialog">
     <Panel>
         <controls:AcrylicBorderHandler/>
 
